special game ready for testing, various bug fixes completed

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ repositories {
 dependencies {
     compileOnly("io.papermc.paper:paper-api:1.21.10-R0.1-SNAPSHOT")
     compileOnly('com.github.koca2000:NoteBlockAPI:1.6.2')
+    compileOnly('com.github.MilkBowl:VaultAPI:1.7') {
+        exclude group: 'org.bukkit', module: 'bukkit'
+    }
 }
 
 tasks {
