added 'use_darkness_effect_sg' to config. also built basic points manager

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -62,6 +62,7 @@ pretty_title_gb: "Glass Bridge"
 
 # Special Game Settings
 game_world_title_sg: "squidgame"
+use_darkness_effect_sg: false
 minimum_players_sg: 2
 game_duration_seconds_sg: 300
 time_before_start_sg: 10
